--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="https://lafilec.github.io/LAFILec/" rel="noopener" class="nav-link">Retornar</a></li>
-                <li><a href="https://vaki.co/es/vaki/9bw4pe0KavU7nMg0O8XH" class="nav-link gold-button" target="_blank">💰 Crowdfunding</a></li>
+                <li><a href="https://lafilec.github.io/crowdfunding/" class="nav-link gold-button" target="_blank">💰 Crowdfunding</a></li>
                 <li><a href="https://instagram.com/lafil.ec?igsh=MTc1MzY4MjdsYXZhYg==" class="nav-link gold-button" target="_blank">📸 Instagram</a></li>
             </ul>
         </nav>
