--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Stickers</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Lato:wght@300;400;700&family=Trajan+Pro:wght@400;700&family=Futura:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta name="description" content="Tienda de stickers personalizados con diseños únicos y coleccionables">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="eternal-mandala">
+    <div class="cosmic-background" aria-hidden="true">
         <div class="mandala-ring"></div>
         <div class="mandala-ring"></div>
         <div class="mandala-ring"></div>
         <div class="mandala-ring"></div>
         <div class="mandala-ring"></div>
-        <div class="eternal-symbols">
+        <div class="cosmic-symbols">
             <div class="symbol"></div>
             <div class="symbol"></div>
             <div class="symbol"></div>
@@ -24,7 +25,7 @@
             <div class="symbol"></div>
             <div class="symbol"></div>
         </div>
-        <div class="power-threads">
+        <div class="energy-threads">
             <div class="thread" style="--rotation: 0deg;"></div>
             <div class="thread" style="--rotation: 45deg;"></div>
             <div class="thread" style="--rotation: 90deg;"></div>
@@ -36,44 +37,49 @@
         </div>
     </div>
 
-    <div class="golden-particles" id="particles"></div>
+    <div class="particle-field" id="particles" aria-hidden="true"></div>
 
     <header id="header">
         <nav class="navbar">
-            <a href="https://lafilec.github.io/LAFILec/" class="logo">
-                <span class="logo-icon">🎵</span>
-                <span class="logo-text">LA FIL</span>
-                <div class="logo-waves">
-                    <div class="wave"></div>
-                    <div class="wave"></div>
-                    <div class="wave"></div>
+            <a href="https://lafilec.github.io/LAFILec/" class="logo" aria-label="Ir a página principal">
+                <img src="LFgold.png" alt="Logo LA FIL" class="logo-image">
+                <div class="logo-aura" aria-hidden="true">
+                    <div class="aura-ring"></div>
+                    <div class="aura-ring"></div>
+                    <div class="aura-ring"></div>
                 </div>
             </a>
 
-            <div class="hamburger" id="hamburger">☰</div>
+            <button class="hamburger" id="hamburger" aria-label="Menú de navegación" aria-expanded="false">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
 
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="https://lafilec.github.io/LAFILec/" rel="noopener" class="nav-link">Retornar</a></li>
-                <li><a href="https://lafilec.github.io/crowdfunding/" class="nav-link gold-button" target="_blank">💰 Crowdfunding</a></li>
-                <li><a href="https://instagram.com/lafil.ec?igsh=MTc1MzY4MjdsYXZhYg==" class="nav-link gold-button" target="_blank">📸 Instagram</a></li>
+                <li><a href="https://lafilec.github.io/crowdfunding/" class="nav-link accent-button" target="_blank" rel="noopener">Crowdfunding</a></li>
+                <li><a href="https://instagram.com/lafil.ec?igsh=MTc1MzY4MjdsYXZhYg==" class="nav-link accent-button" target="_blank" rel="noopener">Instagram</a></li>
             </ul>
         </nav>
     </header>
 
-    <div class="header">
-        <h1 class="main-logo">STICKER STORE</h1>
-        <p class="subtitle">Personaliza, colecciona y expresa con estilo, cada diseño cuenta algo. Tú decides dónde y cómo.</p>
-    </div>
+    <main>
+        <div class="hero-section">
+            <h1 class="main-title">STICKER STORE</h1>
+            <p class="hero-subtitle">Personaliza, colecciona y expresa con estilo, cada diseño cuenta algo. Tú decides dónde y cómo.</p>
+        </div>
 
-    <div class="products-container">
-        <div class="products-grid" id="productsGrid"></div>
-    </div>
+        <div class="products-container">
+            <div class="products-grid" id="productsGrid" role="grid"></div>
+        </div>
+    </main>
 
     <footer class="footer">
         <p class="copyright">© 2025 La Fil. Todos los derechos reservados.</p>
     </footer>
 
-    <div id="purchaseModal" class="modal">
+    <div id="purchaseModal" class="modal" role="dialog" aria-labelledby="modalProductName" aria-hidden="true">
         <div class="modal-content">
             <div class="modal-header">
                 <h2 class="modal-product-name" id="modalProductName">Producto</h2>
@@ -81,78 +87,81 @@
             </div>
 
             <div class="quantity-section">
-                <h3 class="quantity-title">Cantidad</h3>
+                <h3 class="section-title">Cantidad</h3>
                 <div class="quantity-controls">
-                    <button class="quantity-btn" id="decreaseBtn" onclick="changeQuantity(-1)">−</button>
-                    <input type="number" id="quantityInput" value="1" min="1" max="999" readonly>
-                    <button class="quantity-btn" id="increaseBtn" onclick="changeQuantity(1)">+</button>
+                    <button class="quantity-btn" id="decreaseBtn" onclick="changeQuantity(-1)" aria-label="Disminuir cantidad">−</button>
+                    <input type="number" id="quantityInput" value="1" min="1" max="999" readonly aria-label="Cantidad seleccionada">
+                    <button class="quantity-btn" id="increaseBtn" onclick="changeQuantity(1)" aria-label="Aumentar cantidad">+</button>
                 </div>
-                <div class="total-price" id="totalPrice">Total: $0.00</div>
+                <div class="total-display" id="totalPrice">Total: $0.00</div>
             </div>
 
-            <div class="qr-section">
-                <h3 class="qr-title">Información de pago</h3>
+            <div class="payment-section">
+                <h3 class="section-title">Información de pago</h3>
                 <div class="qr-container">
-                         <img src="PB.png" alt="Código QR de pago" class="qr-image">
+                    <img src="PB.png" alt="Código QR de pago" class="qr-image">
                 </div>
+                <p class="payment-note">Envía tu comprobante de pago para coordinar la entrega de tu producto</p>
             </div>
 
-            <div class="seller-info">
-                <h3>Información</h3>
-                <p><strong>Nombre:</strong> David Panchi</p>
-                <p><strong>Teléfono:</strong> +593 998770378</p>
-                <p><strong>La entrega se realiza en coordinación con el proovedor, tiempo de espera aproximado de 24h.</p>
+            <div class="contact-section">
+                <div class="contact-buttons">
+                    <button class="contact-btn whatsapp-btn" onclick="contactWhatsAppPurchase()" aria-label="Contactar por WhatsApp">
+                        <svg viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.890-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.488"/>
+                        </svg>
+                    </button>
+                    <button class="contact-btn email-btn" onclick="contactEmail()" aria-label="Contactar por Email">
+                        <svg viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                        </svg>
+                    </button>
+                </div>
+                <p class="delivery-note"><strong>La entrega se realiza en coordinación con el proveedor, tiempo de espera aproximado de 24h.</strong></p>
             </div>
 
-            <button class="close-button modal-button" onclick="closeModal()">
-                <span class="button-icon">✕</span>
-                <span class="button-text">Cerrar</span>
+            <button class="modal-btn close-btn" onclick="closeModal()" aria-label="Cerrar modal">
+                <span>Cerrar</span>
             </button>
         </div>
     </div>
 
-    <div id="contactModal" class="modal">
+    <div id="contactModal" class="modal" role="dialog" aria-labelledby="contactModalTitle" aria-hidden="true">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-product-name">Stickers Personalizables</h2>
+                <h2 id="contactModalTitle" class="modal-product-name">Stickers Personalizables</h2>
                 <p class="modal-subtitle">Contacta con nosotros para crear tu diseño único</p>
             </div>
 
             <div class="contact-info">
-                <h3>¡Hagamos realidad tu idea!</h3>
+                <h3 class="section-title">¡Hagamos realidad tu idea!</h3>
                 <p>Nuestro equipo te ayudará a crear el sticker perfecto según tus necesidades. El precio se ajustará al formato y diseño que elijas.</p>
             </div>
 
-            <div class="contact-options">
-                <h3>Opciones de Contacto</h3>
-                
-                <button class="contact-button whatsapp-btn" onclick="contactWhatsApp()">
-                    <span class="button-icon">📱</span>
-                    <span class="button-text">WhatsApp</span>
-                    <span class="button-subtitle">+593 998770378</span>
-                </button>
-                
-                <button class="contact-button email-btn" onclick="contactEmail()">
-                    <span class="button-icon">📧</span>
-                    <span class="button-text">Email</span>
-                    <span class="button-subtitle">lafilec01@gmail.com</span>
-                </button>
+            <div class="contact-section">
+                <div class="contact-buttons">
+                    <button class="contact-btn whatsapp-btn" onclick="contactWhatsApp()" aria-label="Contactar por WhatsApp">
+                        <svg viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.890-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.488"/>
+                        </svg>
+                    </button>
+                    <button class="contact-btn email-btn" onclick="contactEmail()" aria-label="Contactar por Email">
+                        <svg viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                        </svg>
+                    </button>
+                </div>
             </div>
 
             <div class="seller-info">
-                <h3>Información</h3>
+                <h3 class="section-title">Información</h3>
                 <p><strong>Nombre:</strong> David Panchi</p>
                 <p><strong>Teléfono:</strong> +593 998770378</p>
-                <p><strong>La entrega se realizara en coordinación con el distrubuidor</p>
+                <p><strong>La entrega se realizará en coordinación con el distribuidor</strong></p>
             </div>
-
-            <button class="close-button modal-button" onclick="closeContactModal()">
-                <span class="button-icon">✕</span>
-                <span class="button-text">Cerrar</span>
-            </button>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=20250101"></script>
 </body>
 </html>
